<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:com.eladcohen.aravkuk="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_chapters"
        android:icon="@android:drawable/ic_dialog_alert"
        android:orderInCategory="3"
        android:title="@string/menu_chapters">
    </item>
    <item
        android:id="@+id/menu_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="1"
        android:title="@string/menu_about">
    </item>
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="2"
        com.eladcohen.aravkuk:showAsAction="never"
        android:title="@string/menu_settings"/>
<!--     <item -->
<!--         android:id="@+id/menu_search" -->
<!--         android:icon="@android:drawable/ic_menu_search" -->
<!--         android:orderInCategory="3" -->
<!--         android:title="@string/menu_search"> -->
<!--     </item> -->

</menu>