    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"  
    android:layout_weight="1"
    android:fillViewport="true">
<LinearLayout 
    android:paddingRight="6pt"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:orientation="vertical"
    android:gravity="right"
    android:layout_gravity="right"
    android:layout_marginRight="5dp">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_title"
        android:textSize="30dp"
        android:textStyle="bold"
    android:gravity="right|fill_horizontal"
    android:layout_gravity="right"        
        tools:context=".About" />

        <TextView
        android:id="@+id/about_ver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textStyle="bold"
    android:gravity="right"
    android:layout_gravity="right"        
        tools:context=".About" />        
        
                <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_zivug"
        android:textSize="22dp"
        android:textStyle="bold"
    android:gravity="right"
    android:layout_gravity="right"        
        tools:context=".About" />
                
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_content"
        android:textSize="20dp"
    android:gravity="right|fill_horizontal"
    android:layout_gravity="right"        
        tools:context=".About" />

</LinearLayout>
</ScrollView>
